// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> with Range Calendar mode should render correctly 1`] = `
<WithStyles(WithLabels)
  endValue={2019-01-10T00:00:00.000Z}
  locale="en-US"
  rangeMode={true}
  startValue={2019-01-05T00:00:00.000Z}
>
  <WithLabels
    classes={
      Object {
        "dropdown": "HvDatePicker-dropdown",
        "icon": "HvDatePicker-icon",
        "input": "HvDatePicker-input",
        "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
        "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
        "inputContainer": "HvDatePicker-inputContainer",
        "label": "HvDatePicker-label",
        "panel": "HvDatePicker-panel",
        "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
        "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
        "rangeMainContainer": "HvDatePicker-rangeMainContainer",
        "root": "HvDatePicker-root",
      }
    }
    endValue={2019-01-10T00:00:00.000Z}
    locale="en-US"
    rangeMode={true}
    startValue={2019-01-05T00:00:00.000Z}
  >
    <WithId
      classes={
        Object {
          "dropdown": "HvDatePicker-dropdown",
          "icon": "HvDatePicker-icon",
          "input": "HvDatePicker-input",
          "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
          "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
          "inputContainer": "HvDatePicker-inputContainer",
          "label": "HvDatePicker-label",
          "panel": "HvDatePicker-panel",
          "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
          "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
          "rangeMainContainer": "HvDatePicker-rangeMainContainer",
          "root": "HvDatePicker-root",
        }
      }
      endValue={2019-01-10T00:00:00.000Z}
      labels={
        Object {
          "applyLabel": "Apply",
          "cancelLabel": "Cancel",
          "placeholder": "Select a date",
          "rangeEnd": "End date",
          "rangeStart": "Start date",
          "title": "",
        }
      }
      locale="en-US"
      rangeMode={true}
      startValue={2019-01-05T00:00:00.000Z}
    >
      <HvDatePicker
        classes={
          Object {
            "dropdown": "HvDatePicker-dropdown",
            "icon": "HvDatePicker-icon",
            "input": "HvDatePicker-input",
            "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
            "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
            "inputContainer": "HvDatePicker-inputContainer",
            "label": "HvDatePicker-label",
            "panel": "HvDatePicker-panel",
            "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
            "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
            "rangeMainContainer": "HvDatePicker-rangeMainContainer",
            "root": "HvDatePicker-root",
          }
        }
        endValue={2019-01-10T00:00:00.000Z}
        id="hv-date-picker-35"
        labels={
          Object {
            "applyLabel": "Apply",
            "cancelLabel": "Cancel",
            "placeholder": "Select a date",
            "rangeEnd": "End date",
            "rangeStart": "Start date",
            "title": "",
          }
        }
        locale="en-US"
        rangeMode={true}
        startValue={2019-01-05T00:00:00.000Z}
      >
        <WithStyles(WithId)
          className="HvDatePicker-root"
          id="hv-date-picker-35"
          value={
            Object {
              "endDate": 2019-01-10T00:00:00.000Z,
              "startDate": 2019-01-05T00:00:00.000Z,
            }
          }
        >
          <WithId
            className="HvDatePicker-root"
            classes={
              Object {
                "root": "HvFormElement-root",
              }
            }
            id="hv-date-picker-35"
            value={
              Object {
                "endDate": 2019-01-10T00:00:00.000Z,
                "startDate": 2019-01-05T00:00:00.000Z,
              }
            }
          >
            <HvFormElement
              className="HvDatePicker-root"
              classes={
                Object {
                  "root": "HvFormElement-root",
                }
              }
              id="hv-date-picker-35"
              value={
                Object {
                  "endDate": 2019-01-10T00:00:00.000Z,
                  "startDate": 2019-01-05T00:00:00.000Z,
                }
              }
            >
              <div
                className="HvDatePicker-root HvFormElement-root"
              >
                <WithStyles(HvLabel)
                  className="HvDatePicker-label"
                  id="hv-date-picker-35-label"
                  label=""
                >
                  <HvLabel
                    className="HvDatePicker-label"
                    classes={
                      Object {
                        "childGutter": "HvLabel-childGutter",
                        "labelDisabled": "HvLabel-labelDisabled",
                        "root": "HvLabel-root",
                      }
                    }
                    id="hv-date-picker-35-label"
                    label=""
                  >
                    <WithStyles(ForwardRef)
                      className="HvDatePicker-label HvLabel-root"
                      component="label"
                      id="hv-date-picker-35-label"
                      variant="highlightText"
                    >
                      <ForwardRef
                        className="HvDatePicker-label HvLabel-root"
                        classes={
                          Object {
                            "3xlTitle": "HvTypography-3xlTitle",
                            "4xlTitle": "HvTypography-4xlTitle",
                            "5xlTitle": "HvTypography-5xlTitle",
                            "disabledText": "HvTypography-disabledText",
                            "highlightText": "HvTypography-highlightText",
                            "lTitle": "HvTypography-lTitle",
                            "link": "HvTypography-link",
                            "mTitle": "HvTypography-mTitle",
                            "noWrap": "HvTypography-noWrap",
                            "normalText": "HvTypography-normalText",
                            "placeholderText": "HvTypography-placeholderText",
                            "root": "HvTypography-root",
                            "sTitle": "HvTypography-sTitle",
                            "sectionTitle": "HvTypography-sectionTitle",
                            "selectedNavText": "HvTypography-selectedNavText",
                            "vizText": "HvTypography-vizText",
                            "vizTextDisabled": "HvTypography-vizTextDisabled",
                            "xlTitle": "HvTypography-xlTitle",
                            "xsInlineLink": "HvTypography-xsInlineLink",
                            "xsTitle": "HvTypography-xsTitle",
                            "xxlTitle": "HvTypography-xxlTitle",
                            "xxsTitle": "HvTypography-xxsTitle",
                          }
                        }
                        component="label"
                        id="hv-date-picker-35-label"
                        variant="highlightText"
                      >
                        <label
                          className="HvDatePicker-label HvLabel-root HvTypography-root HvTypography-highlightText"
                          id="hv-date-picker-35-label"
                        />
                      </ForwardRef>
                    </WithStyles(ForwardRef)>
                    <WithStyles(WithId)
                      adornment={
                        <Calendar
                          className="HvDatePicker-icon"
                        />
                      }
                      classes={
                        Object {
                          "panel": "HvDatePicker-panel",
                          "root": "HvDatePicker-dropdown",
                        }
                      }
                      disablePortal={true}
                      expanded={false}
                      onClickOutside={[Function]}
                      onToggle={[Function]}
                      placeholder={
                        <ForwardRef(WithStyles)
                          variant="normalText"
                        >
                          5 - 10 Jan 2019
                        </ForwardRef(WithStyles)>
                      }
                      placement="right"
                      popperProps={
                        Object {
                          "modifiers": Object {
                            "preventOverflow": Object {
                              "escapeWithReference": true,
                            },
                          },
                        }
                      }
                    >
                      <WithId
                        adornment={
                          <Calendar
                            className="HvDatePicker-icon"
                          />
                        }
                        classes={
                          Object {
                            "arrow": "HvBaseDropdown-arrow",
                            "header": "HvBaseDropdown-header",
                            "headerDisabled": "HvBaseDropdown-headerDisabled",
                            "headerOpen": "HvBaseDropdown-headerOpen",
                            "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                            "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                            "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                            "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                            "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                            "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                            "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                            "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                            "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                            "selection": "HvBaseDropdown-selection",
                            "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                            "truncate": "HvBaseDropdown-truncate",
                          }
                        }
                        disablePortal={true}
                        expanded={false}
                        onClickOutside={[Function]}
                        onToggle={[Function]}
                        placeholder={
                          <ForwardRef(WithStyles)
                            variant="normalText"
                          >
                            5 - 10 Jan 2019
                          </ForwardRef(WithStyles)>
                        }
                        placement="right"
                        popperProps={
                          Object {
                            "modifiers": Object {
                              "preventOverflow": Object {
                                "escapeWithReference": true,
                              },
                            },
                          }
                        }
                      >
                        <HvBaseDropdown
                          adornment={
                            <Calendar
                              className="HvDatePicker-icon"
                            />
                          }
                          classes={
                            Object {
                              "arrow": "HvBaseDropdown-arrow",
                              "header": "HvBaseDropdown-header",
                              "headerDisabled": "HvBaseDropdown-headerDisabled",
                              "headerOpen": "HvBaseDropdown-headerOpen",
                              "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                              "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                              "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                              "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                              "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                              "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                              "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                              "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                              "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                              "selection": "HvBaseDropdown-selection",
                              "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                              "truncate": "HvBaseDropdown-truncate",
                            }
                          }
                          disablePortal={true}
                          expanded={false}
                          id="hv-base-dropdown-36"
                          onClickOutside={[Function]}
                          onToggle={[Function]}
                          placeholder={
                            <ForwardRef(WithStyles)
                              variant="normalText"
                            >
                              5 - 10 Jan 2019
                            </ForwardRef(WithStyles)>
                          }
                          placement="right"
                          popperProps={
                            Object {
                              "modifiers": Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              },
                            }
                          }
                        >
                          <div
                            aria-expanded={false}
                            aria-haspopup="listbox"
                            aria-labelledby="hv-date-picker-35-selectionPlaceholder"
                            className="HvBaseDropdown-root HvDatePicker-dropdown"
                            id="hv-date-picker-35"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-labelledby="hv-date-picker-35-selectionPlaceholder"
                              className="HvBaseDropdown-header"
                              id="hv-date-picker-35-header"
                              role="textbox"
                            >
                              <div
                                className="HvBaseDropdown-selection"
                                id="hv-date-picker-35-selectionPlaceholder"
                              >
                                <WithStyles(ForwardRef)
                                  variant="normalText"
                                >
                                  <ForwardRef
                                    classes={
                                      Object {
                                        "3xlTitle": "HvTypography-3xlTitle",
                                        "4xlTitle": "HvTypography-4xlTitle",
                                        "5xlTitle": "HvTypography-5xlTitle",
                                        "disabledText": "HvTypography-disabledText",
                                        "highlightText": "HvTypography-highlightText",
                                        "lTitle": "HvTypography-lTitle",
                                        "link": "HvTypography-link",
                                        "mTitle": "HvTypography-mTitle",
                                        "noWrap": "HvTypography-noWrap",
                                        "normalText": "HvTypography-normalText",
                                        "placeholderText": "HvTypography-placeholderText",
                                        "root": "HvTypography-root",
                                        "sTitle": "HvTypography-sTitle",
                                        "sectionTitle": "HvTypography-sectionTitle",
                                        "selectedNavText": "HvTypography-selectedNavText",
                                        "vizText": "HvTypography-vizText",
                                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                                        "xlTitle": "HvTypography-xlTitle",
                                        "xsInlineLink": "HvTypography-xsInlineLink",
                                        "xsTitle": "HvTypography-xsTitle",
                                        "xxlTitle": "HvTypography-xxlTitle",
                                        "xxsTitle": "HvTypography-xxsTitle",
                                      }
                                    }
                                    variant="normalText"
                                  >
                                    <p
                                      className="HvTypography-root HvTypography-normalText"
                                    >
                                      5 - 10 Jan 2019
                                    </p>
                                  </ForwardRef>
                                </WithStyles(ForwardRef)>
                              </div>
                              <Calendar
                                className="HvDatePicker-icon"
                              >
                                <WithStyles(HvIconBase)
                                  className="HvDatePicker-icon"
                                  iconSize="S"
                                  name="Calendar"
                                >
                                  <HvIconBase
                                    className="HvDatePicker-icon"
                                    classes={
                                      Object {
                                        "l": "HvIconBase-l",
                                        "m": "HvIconBase-m",
                                        "root": "HvIconBase-root",
                                        "s": "HvIconBase-s",
                                        "xs": "HvIconBase-xs",
                                      }
                                    }
                                    iconSize="S"
                                    name="Calendar"
                                  >
                                    <div
                                      className="HvDatePicker-icon HvIconBase-root HvIconBase-s"
                                      name="Calendar"
                                    >
                                      <svg
                                        focusable={false}
                                        height={16}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </HvIconBase>
                                </WithStyles(HvIconBase)>
                              </Calendar>
                            </div>
                          </div>
                          <ForwardRef(Popper)
                            anchorEl={null}
                            disablePortal={true}
                            modifiers={
                              Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              }
                            }
                            open={false}
                            placement="bottom-start"
                            popperOptions={
                              Object {
                                "onCreate": [Function],
                                "onUpdate": [Function],
                              }
                            }
                            style={
                              Object {
                                "zIndex": 1500,
                              }
                            }
                          />
                        </HvBaseDropdown>
                      </WithId>
                    </WithStyles(WithId)>
                  </HvLabel>
                </WithStyles(HvLabel)>
              </div>
            </HvFormElement>
          </WithId>
        </WithStyles(WithId)>
      </HvDatePicker>
    </WithId>
  </WithLabels>
</WithStyles(WithLabels)>
`;

exports[`<DatePicker /> with Single Calendar mode should render correctly 1`] = `
<WithStyles(WithLabels)
  locale="en-US"
  value={2019-01-01T00:00:00.000Z}
>
  <WithLabels
    classes={
      Object {
        "dropdown": "HvDatePicker-dropdown",
        "icon": "HvDatePicker-icon",
        "input": "HvDatePicker-input",
        "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
        "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
        "inputContainer": "HvDatePicker-inputContainer",
        "label": "HvDatePicker-label",
        "panel": "HvDatePicker-panel",
        "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
        "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
        "rangeMainContainer": "HvDatePicker-rangeMainContainer",
        "root": "HvDatePicker-root",
      }
    }
    locale="en-US"
    value={2019-01-01T00:00:00.000Z}
  >
    <WithId
      classes={
        Object {
          "dropdown": "HvDatePicker-dropdown",
          "icon": "HvDatePicker-icon",
          "input": "HvDatePicker-input",
          "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
          "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
          "inputContainer": "HvDatePicker-inputContainer",
          "label": "HvDatePicker-label",
          "panel": "HvDatePicker-panel",
          "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
          "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
          "rangeMainContainer": "HvDatePicker-rangeMainContainer",
          "root": "HvDatePicker-root",
        }
      }
      labels={
        Object {
          "applyLabel": "Apply",
          "cancelLabel": "Cancel",
          "placeholder": "Select a date",
          "rangeEnd": "End date",
          "rangeStart": "Start date",
          "title": "",
        }
      }
      locale="en-US"
      value={2019-01-01T00:00:00.000Z}
    >
      <HvDatePicker
        classes={
          Object {
            "dropdown": "HvDatePicker-dropdown",
            "icon": "HvDatePicker-icon",
            "input": "HvDatePicker-input",
            "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
            "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
            "inputContainer": "HvDatePicker-inputContainer",
            "label": "HvDatePicker-label",
            "panel": "HvDatePicker-panel",
            "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
            "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
            "rangeMainContainer": "HvDatePicker-rangeMainContainer",
            "root": "HvDatePicker-root",
          }
        }
        id="hv-date-picker-20"
        labels={
          Object {
            "applyLabel": "Apply",
            "cancelLabel": "Cancel",
            "placeholder": "Select a date",
            "rangeEnd": "End date",
            "rangeStart": "Start date",
            "title": "",
          }
        }
        locale="en-US"
        value={2019-01-01T00:00:00.000Z}
      >
        <WithStyles(WithId)
          className="HvDatePicker-root"
          id="hv-date-picker-20"
          value={2019-01-01T00:00:00.000Z}
        >
          <WithId
            className="HvDatePicker-root"
            classes={
              Object {
                "root": "HvFormElement-root",
              }
            }
            id="hv-date-picker-20"
            value={2019-01-01T00:00:00.000Z}
          >
            <HvFormElement
              className="HvDatePicker-root"
              classes={
                Object {
                  "root": "HvFormElement-root",
                }
              }
              id="hv-date-picker-20"
              value={2019-01-01T00:00:00.000Z}
            >
              <div
                className="HvDatePicker-root HvFormElement-root"
              >
                <WithStyles(HvLabel)
                  className="HvDatePicker-label"
                  id="hv-date-picker-20-label"
                  label=""
                >
                  <HvLabel
                    className="HvDatePicker-label"
                    classes={
                      Object {
                        "childGutter": "HvLabel-childGutter",
                        "labelDisabled": "HvLabel-labelDisabled",
                        "root": "HvLabel-root",
                      }
                    }
                    id="hv-date-picker-20-label"
                    label=""
                  >
                    <WithStyles(ForwardRef)
                      className="HvDatePicker-label HvLabel-root"
                      component="label"
                      id="hv-date-picker-20-label"
                      variant="highlightText"
                    >
                      <ForwardRef
                        className="HvDatePicker-label HvLabel-root"
                        classes={
                          Object {
                            "3xlTitle": "HvTypography-3xlTitle",
                            "4xlTitle": "HvTypography-4xlTitle",
                            "5xlTitle": "HvTypography-5xlTitle",
                            "disabledText": "HvTypography-disabledText",
                            "highlightText": "HvTypography-highlightText",
                            "lTitle": "HvTypography-lTitle",
                            "link": "HvTypography-link",
                            "mTitle": "HvTypography-mTitle",
                            "noWrap": "HvTypography-noWrap",
                            "normalText": "HvTypography-normalText",
                            "placeholderText": "HvTypography-placeholderText",
                            "root": "HvTypography-root",
                            "sTitle": "HvTypography-sTitle",
                            "sectionTitle": "HvTypography-sectionTitle",
                            "selectedNavText": "HvTypography-selectedNavText",
                            "vizText": "HvTypography-vizText",
                            "vizTextDisabled": "HvTypography-vizTextDisabled",
                            "xlTitle": "HvTypography-xlTitle",
                            "xsInlineLink": "HvTypography-xsInlineLink",
                            "xsTitle": "HvTypography-xsTitle",
                            "xxlTitle": "HvTypography-xxlTitle",
                            "xxsTitle": "HvTypography-xxsTitle",
                          }
                        }
                        component="label"
                        id="hv-date-picker-20-label"
                        variant="highlightText"
                      >
                        <label
                          className="HvDatePicker-label HvLabel-root HvTypography-root HvTypography-highlightText"
                          id="hv-date-picker-20-label"
                        />
                      </ForwardRef>
                    </WithStyles(ForwardRef)>
                    <WithStyles(WithId)
                      adornment={
                        <Calendar
                          className="HvDatePicker-icon"
                        />
                      }
                      classes={
                        Object {
                          "panel": "HvDatePicker-panel",
                          "root": "HvDatePicker-dropdown",
                        }
                      }
                      disablePortal={true}
                      expanded={false}
                      onClickOutside={[Function]}
                      onToggle={[Function]}
                      placeholder={
                        <ForwardRef(WithStyles)
                          variant="normalText"
                        >
                          1 Jan 2019
                        </ForwardRef(WithStyles)>
                      }
                      placement="right"
                      popperProps={
                        Object {
                          "modifiers": Object {
                            "preventOverflow": Object {
                              "escapeWithReference": true,
                            },
                          },
                        }
                      }
                    >
                      <WithId
                        adornment={
                          <Calendar
                            className="HvDatePicker-icon"
                          />
                        }
                        classes={
                          Object {
                            "arrow": "HvBaseDropdown-arrow",
                            "header": "HvBaseDropdown-header",
                            "headerDisabled": "HvBaseDropdown-headerDisabled",
                            "headerOpen": "HvBaseDropdown-headerOpen",
                            "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                            "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                            "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                            "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                            "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                            "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                            "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                            "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                            "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                            "selection": "HvBaseDropdown-selection",
                            "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                            "truncate": "HvBaseDropdown-truncate",
                          }
                        }
                        disablePortal={true}
                        expanded={false}
                        onClickOutside={[Function]}
                        onToggle={[Function]}
                        placeholder={
                          <ForwardRef(WithStyles)
                            variant="normalText"
                          >
                            1 Jan 2019
                          </ForwardRef(WithStyles)>
                        }
                        placement="right"
                        popperProps={
                          Object {
                            "modifiers": Object {
                              "preventOverflow": Object {
                                "escapeWithReference": true,
                              },
                            },
                          }
                        }
                      >
                        <HvBaseDropdown
                          adornment={
                            <Calendar
                              className="HvDatePicker-icon"
                            />
                          }
                          classes={
                            Object {
                              "arrow": "HvBaseDropdown-arrow",
                              "header": "HvBaseDropdown-header",
                              "headerDisabled": "HvBaseDropdown-headerDisabled",
                              "headerOpen": "HvBaseDropdown-headerOpen",
                              "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                              "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                              "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                              "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                              "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                              "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                              "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                              "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                              "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                              "selection": "HvBaseDropdown-selection",
                              "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                              "truncate": "HvBaseDropdown-truncate",
                            }
                          }
                          disablePortal={true}
                          expanded={false}
                          id="hv-base-dropdown-21"
                          onClickOutside={[Function]}
                          onToggle={[Function]}
                          placeholder={
                            <ForwardRef(WithStyles)
                              variant="normalText"
                            >
                              1 Jan 2019
                            </ForwardRef(WithStyles)>
                          }
                          placement="right"
                          popperProps={
                            Object {
                              "modifiers": Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              },
                            }
                          }
                        >
                          <div
                            aria-expanded={false}
                            aria-haspopup="listbox"
                            aria-labelledby="hv-date-picker-20-selectionPlaceholder"
                            className="HvBaseDropdown-root HvDatePicker-dropdown"
                            id="hv-date-picker-20"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-labelledby="hv-date-picker-20-selectionPlaceholder"
                              className="HvBaseDropdown-header"
                              id="hv-date-picker-20-header"
                              role="textbox"
                            >
                              <div
                                className="HvBaseDropdown-selection"
                                id="hv-date-picker-20-selectionPlaceholder"
                              >
                                <WithStyles(ForwardRef)
                                  variant="normalText"
                                >
                                  <ForwardRef
                                    classes={
                                      Object {
                                        "3xlTitle": "HvTypography-3xlTitle",
                                        "4xlTitle": "HvTypography-4xlTitle",
                                        "5xlTitle": "HvTypography-5xlTitle",
                                        "disabledText": "HvTypography-disabledText",
                                        "highlightText": "HvTypography-highlightText",
                                        "lTitle": "HvTypography-lTitle",
                                        "link": "HvTypography-link",
                                        "mTitle": "HvTypography-mTitle",
                                        "noWrap": "HvTypography-noWrap",
                                        "normalText": "HvTypography-normalText",
                                        "placeholderText": "HvTypography-placeholderText",
                                        "root": "HvTypography-root",
                                        "sTitle": "HvTypography-sTitle",
                                        "sectionTitle": "HvTypography-sectionTitle",
                                        "selectedNavText": "HvTypography-selectedNavText",
                                        "vizText": "HvTypography-vizText",
                                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                                        "xlTitle": "HvTypography-xlTitle",
                                        "xsInlineLink": "HvTypography-xsInlineLink",
                                        "xsTitle": "HvTypography-xsTitle",
                                        "xxlTitle": "HvTypography-xxlTitle",
                                        "xxsTitle": "HvTypography-xxsTitle",
                                      }
                                    }
                                    variant="normalText"
                                  >
                                    <p
                                      className="HvTypography-root HvTypography-normalText"
                                    >
                                      1 Jan 2019
                                    </p>
                                  </ForwardRef>
                                </WithStyles(ForwardRef)>
                              </div>
                              <Calendar
                                className="HvDatePicker-icon"
                              >
                                <WithStyles(HvIconBase)
                                  className="HvDatePicker-icon"
                                  iconSize="S"
                                  name="Calendar"
                                >
                                  <HvIconBase
                                    className="HvDatePicker-icon"
                                    classes={
                                      Object {
                                        "l": "HvIconBase-l",
                                        "m": "HvIconBase-m",
                                        "root": "HvIconBase-root",
                                        "s": "HvIconBase-s",
                                        "xs": "HvIconBase-xs",
                                      }
                                    }
                                    iconSize="S"
                                    name="Calendar"
                                  >
                                    <div
                                      className="HvDatePicker-icon HvIconBase-root HvIconBase-s"
                                      name="Calendar"
                                    >
                                      <svg
                                        focusable={false}
                                        height={16}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </HvIconBase>
                                </WithStyles(HvIconBase)>
                              </Calendar>
                            </div>
                          </div>
                          <ForwardRef(Popper)
                            anchorEl={null}
                            disablePortal={true}
                            modifiers={
                              Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              }
                            }
                            open={false}
                            placement="bottom-start"
                            popperOptions={
                              Object {
                                "onCreate": [Function],
                                "onUpdate": [Function],
                              }
                            }
                            style={
                              Object {
                                "zIndex": 1500,
                              }
                            }
                          />
                        </HvBaseDropdown>
                      </WithId>
                    </WithStyles(WithId)>
                  </HvLabel>
                </WithStyles(HvLabel)>
              </div>
            </HvFormElement>
          </WithId>
        </WithStyles(WithId)>
      </HvDatePicker>
    </WithId>
  </WithLabels>
</WithStyles(WithLabels)>
`;

exports[`<DatePicker /> with custom properties should render correctly 1`] = `
<WithStyles(WithLabels)
  horizontalPlacement="left"
  id="testingDatePicker"
  labels={
    Object {
      "applyLabel": "OK",
      "cancelLabel": "GO BACK",
      "placeholder": "I'M THE PLACEHOLDER",
      "title": "TESTING LABEL",
    }
  }
  locale="en-US"
  showActions={true}
  value={2019-01-05T00:00:00.000Z}
>
  <WithLabels
    classes={
      Object {
        "dropdown": "HvDatePicker-dropdown",
        "icon": "HvDatePicker-icon",
        "input": "HvDatePicker-input",
        "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
        "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
        "inputContainer": "HvDatePicker-inputContainer",
        "label": "HvDatePicker-label",
        "panel": "HvDatePicker-panel",
        "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
        "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
        "rangeMainContainer": "HvDatePicker-rangeMainContainer",
        "root": "HvDatePicker-root",
      }
    }
    horizontalPlacement="left"
    id="testingDatePicker"
    labels={
      Object {
        "applyLabel": "OK",
        "cancelLabel": "GO BACK",
        "placeholder": "I'M THE PLACEHOLDER",
        "title": "TESTING LABEL",
      }
    }
    locale="en-US"
    showActions={true}
    value={2019-01-05T00:00:00.000Z}
  >
    <WithId
      classes={
        Object {
          "dropdown": "HvDatePicker-dropdown",
          "icon": "HvDatePicker-icon",
          "input": "HvDatePicker-input",
          "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
          "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
          "inputContainer": "HvDatePicker-inputContainer",
          "label": "HvDatePicker-label",
          "panel": "HvDatePicker-panel",
          "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
          "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
          "rangeMainContainer": "HvDatePicker-rangeMainContainer",
          "root": "HvDatePicker-root",
        }
      }
      horizontalPlacement="left"
      id="testingDatePicker"
      labels={
        Object {
          "applyLabel": "OK",
          "cancelLabel": "GO BACK",
          "placeholder": "I'M THE PLACEHOLDER",
          "rangeEnd": "End date",
          "rangeStart": "Start date",
          "title": "TESTING LABEL",
        }
      }
      locale="en-US"
      showActions={true}
      value={2019-01-05T00:00:00.000Z}
    >
      <HvDatePicker
        classes={
          Object {
            "dropdown": "HvDatePicker-dropdown",
            "icon": "HvDatePicker-icon",
            "input": "HvDatePicker-input",
            "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
            "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
            "inputContainer": "HvDatePicker-inputContainer",
            "label": "HvDatePicker-label",
            "panel": "HvDatePicker-panel",
            "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
            "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
            "rangeMainContainer": "HvDatePicker-rangeMainContainer",
            "root": "HvDatePicker-root",
          }
        }
        horizontalPlacement="left"
        id="testingDatePicker"
        labels={
          Object {
            "applyLabel": "OK",
            "cancelLabel": "GO BACK",
            "placeholder": "I'M THE PLACEHOLDER",
            "rangeEnd": "End date",
            "rangeStart": "Start date",
            "title": "TESTING LABEL",
          }
        }
        locale="en-US"
        showActions={true}
        value={2019-01-05T00:00:00.000Z}
      >
        <WithStyles(WithId)
          className="HvDatePicker-root"
          id="testingDatePicker"
          value={2019-01-05T00:00:00.000Z}
        >
          <WithId
            className="HvDatePicker-root"
            classes={
              Object {
                "root": "HvFormElement-root",
              }
            }
            id="testingDatePicker"
            value={2019-01-05T00:00:00.000Z}
          >
            <HvFormElement
              className="HvDatePicker-root"
              classes={
                Object {
                  "root": "HvFormElement-root",
                }
              }
              id="testingDatePicker"
              value={2019-01-05T00:00:00.000Z}
            >
              <div
                className="HvDatePicker-root HvFormElement-root"
              >
                <WithStyles(HvLabel)
                  className="HvDatePicker-label"
                  id="testingDatePicker-label"
                  label="TESTING LABEL"
                >
                  <HvLabel
                    className="HvDatePicker-label"
                    classes={
                      Object {
                        "childGutter": "HvLabel-childGutter",
                        "labelDisabled": "HvLabel-labelDisabled",
                        "root": "HvLabel-root",
                      }
                    }
                    id="testingDatePicker-label"
                    label="TESTING LABEL"
                  >
                    <WithStyles(ForwardRef)
                      className="HvDatePicker-label HvLabel-root HvLabel-childGutter"
                      component="label"
                      id="testingDatePicker-label"
                      variant="highlightText"
                    >
                      <ForwardRef
                        className="HvDatePicker-label HvLabel-root HvLabel-childGutter"
                        classes={
                          Object {
                            "3xlTitle": "HvTypography-3xlTitle",
                            "4xlTitle": "HvTypography-4xlTitle",
                            "5xlTitle": "HvTypography-5xlTitle",
                            "disabledText": "HvTypography-disabledText",
                            "highlightText": "HvTypography-highlightText",
                            "lTitle": "HvTypography-lTitle",
                            "link": "HvTypography-link",
                            "mTitle": "HvTypography-mTitle",
                            "noWrap": "HvTypography-noWrap",
                            "normalText": "HvTypography-normalText",
                            "placeholderText": "HvTypography-placeholderText",
                            "root": "HvTypography-root",
                            "sTitle": "HvTypography-sTitle",
                            "sectionTitle": "HvTypography-sectionTitle",
                            "selectedNavText": "HvTypography-selectedNavText",
                            "vizText": "HvTypography-vizText",
                            "vizTextDisabled": "HvTypography-vizTextDisabled",
                            "xlTitle": "HvTypography-xlTitle",
                            "xsInlineLink": "HvTypography-xsInlineLink",
                            "xsTitle": "HvTypography-xsTitle",
                            "xxlTitle": "HvTypography-xxlTitle",
                            "xxsTitle": "HvTypography-xxsTitle",
                          }
                        }
                        component="label"
                        id="testingDatePicker-label"
                        variant="highlightText"
                      >
                        <label
                          className="HvDatePicker-label HvLabel-root HvLabel-childGutter HvTypography-root HvTypography-highlightText"
                          id="testingDatePicker-label"
                        >
                          TESTING LABEL
                        </label>
                      </ForwardRef>
                    </WithStyles(ForwardRef)>
                    <WithStyles(WithId)
                      adornment={
                        <Calendar
                          className="HvDatePicker-icon"
                        />
                      }
                      classes={
                        Object {
                          "panel": "HvDatePicker-panel",
                          "root": "HvDatePicker-dropdown",
                        }
                      }
                      disablePortal={true}
                      expanded={false}
                      onClickOutside={[Function]}
                      onToggle={[Function]}
                      placeholder={
                        <ForwardRef(WithStyles)
                          variant="normalText"
                        >
                          5 Jan 2019
                        </ForwardRef(WithStyles)>
                      }
                      placement="left"
                      popperProps={
                        Object {
                          "modifiers": Object {
                            "preventOverflow": Object {
                              "escapeWithReference": true,
                            },
                          },
                        }
                      }
                    >
                      <WithId
                        adornment={
                          <Calendar
                            className="HvDatePicker-icon"
                          />
                        }
                        classes={
                          Object {
                            "arrow": "HvBaseDropdown-arrow",
                            "header": "HvBaseDropdown-header",
                            "headerDisabled": "HvBaseDropdown-headerDisabled",
                            "headerOpen": "HvBaseDropdown-headerOpen",
                            "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                            "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                            "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                            "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                            "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                            "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                            "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                            "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                            "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                            "selection": "HvBaseDropdown-selection",
                            "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                            "truncate": "HvBaseDropdown-truncate",
                          }
                        }
                        disablePortal={true}
                        expanded={false}
                        onClickOutside={[Function]}
                        onToggle={[Function]}
                        placeholder={
                          <ForwardRef(WithStyles)
                            variant="normalText"
                          >
                            5 Jan 2019
                          </ForwardRef(WithStyles)>
                        }
                        placement="left"
                        popperProps={
                          Object {
                            "modifiers": Object {
                              "preventOverflow": Object {
                                "escapeWithReference": true,
                              },
                            },
                          }
                        }
                      >
                        <HvBaseDropdown
                          adornment={
                            <Calendar
                              className="HvDatePicker-icon"
                            />
                          }
                          classes={
                            Object {
                              "arrow": "HvBaseDropdown-arrow",
                              "header": "HvBaseDropdown-header",
                              "headerDisabled": "HvBaseDropdown-headerDisabled",
                              "headerOpen": "HvBaseDropdown-headerOpen",
                              "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                              "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                              "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                              "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                              "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                              "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                              "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                              "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                              "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                              "selection": "HvBaseDropdown-selection",
                              "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                              "truncate": "HvBaseDropdown-truncate",
                            }
                          }
                          disablePortal={true}
                          expanded={false}
                          id="hv-base-dropdown-46"
                          onClickOutside={[Function]}
                          onToggle={[Function]}
                          placeholder={
                            <ForwardRef(WithStyles)
                              variant="normalText"
                            >
                              5 Jan 2019
                            </ForwardRef(WithStyles)>
                          }
                          placement="left"
                          popperProps={
                            Object {
                              "modifiers": Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              },
                            }
                          }
                        >
                          <div
                            aria-expanded={false}
                            aria-haspopup="listbox"
                            aria-labelledby="testingDatePicker-selectionPlaceholder"
                            className="HvBaseDropdown-root HvDatePicker-dropdown"
                            id="testingDatePicker"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-labelledby="testingDatePicker-selectionPlaceholder"
                              className="HvBaseDropdown-header"
                              id="testingDatePicker-header"
                              role="textbox"
                            >
                              <div
                                className="HvBaseDropdown-selection"
                                id="testingDatePicker-selectionPlaceholder"
                              >
                                <WithStyles(ForwardRef)
                                  variant="normalText"
                                >
                                  <ForwardRef
                                    classes={
                                      Object {
                                        "3xlTitle": "HvTypography-3xlTitle",
                                        "4xlTitle": "HvTypography-4xlTitle",
                                        "5xlTitle": "HvTypography-5xlTitle",
                                        "disabledText": "HvTypography-disabledText",
                                        "highlightText": "HvTypography-highlightText",
                                        "lTitle": "HvTypography-lTitle",
                                        "link": "HvTypography-link",
                                        "mTitle": "HvTypography-mTitle",
                                        "noWrap": "HvTypography-noWrap",
                                        "normalText": "HvTypography-normalText",
                                        "placeholderText": "HvTypography-placeholderText",
                                        "root": "HvTypography-root",
                                        "sTitle": "HvTypography-sTitle",
                                        "sectionTitle": "HvTypography-sectionTitle",
                                        "selectedNavText": "HvTypography-selectedNavText",
                                        "vizText": "HvTypography-vizText",
                                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                                        "xlTitle": "HvTypography-xlTitle",
                                        "xsInlineLink": "HvTypography-xsInlineLink",
                                        "xsTitle": "HvTypography-xsTitle",
                                        "xxlTitle": "HvTypography-xxlTitle",
                                        "xxsTitle": "HvTypography-xxsTitle",
                                      }
                                    }
                                    variant="normalText"
                                  >
                                    <p
                                      className="HvTypography-root HvTypography-normalText"
                                    >
                                      5 Jan 2019
                                    </p>
                                  </ForwardRef>
                                </WithStyles(ForwardRef)>
                              </div>
                              <Calendar
                                className="HvDatePicker-icon"
                              >
                                <WithStyles(HvIconBase)
                                  className="HvDatePicker-icon"
                                  iconSize="S"
                                  name="Calendar"
                                >
                                  <HvIconBase
                                    className="HvDatePicker-icon"
                                    classes={
                                      Object {
                                        "l": "HvIconBase-l",
                                        "m": "HvIconBase-m",
                                        "root": "HvIconBase-root",
                                        "s": "HvIconBase-s",
                                        "xs": "HvIconBase-xs",
                                      }
                                    }
                                    iconSize="S"
                                    name="Calendar"
                                  >
                                    <div
                                      className="HvDatePicker-icon HvIconBase-root HvIconBase-s"
                                      name="Calendar"
                                    >
                                      <svg
                                        focusable={false}
                                        height={16}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </HvIconBase>
                                </WithStyles(HvIconBase)>
                              </Calendar>
                            </div>
                          </div>
                          <ForwardRef(Popper)
                            anchorEl={null}
                            disablePortal={true}
                            modifiers={
                              Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              }
                            }
                            open={false}
                            placement="bottom-end"
                            popperOptions={
                              Object {
                                "onCreate": [Function],
                                "onUpdate": [Function],
                              }
                            }
                            style={
                              Object {
                                "zIndex": 1500,
                              }
                            }
                          />
                        </HvBaseDropdown>
                      </WithId>
                    </WithStyles(WithId)>
                  </HvLabel>
                </WithStyles(HvLabel)>
              </div>
            </HvFormElement>
          </WithId>
        </WithStyles(WithId)>
      </HvDatePicker>
    </WithId>
  </WithLabels>
</WithStyles(WithLabels)>
`;

exports[`<DatePicker /> with minimum configuration should render correctly 1`] = `
<WithStyles(WithLabels)>
  <WithLabels
    classes={
      Object {
        "dropdown": "HvDatePicker-dropdown",
        "icon": "HvDatePicker-icon",
        "input": "HvDatePicker-input",
        "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
        "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
        "inputContainer": "HvDatePicker-inputContainer",
        "label": "HvDatePicker-label",
        "panel": "HvDatePicker-panel",
        "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
        "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
        "rangeMainContainer": "HvDatePicker-rangeMainContainer",
        "root": "HvDatePicker-root",
      }
    }
  >
    <WithId
      classes={
        Object {
          "dropdown": "HvDatePicker-dropdown",
          "icon": "HvDatePicker-icon",
          "input": "HvDatePicker-input",
          "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
          "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
          "inputContainer": "HvDatePicker-inputContainer",
          "label": "HvDatePicker-label",
          "panel": "HvDatePicker-panel",
          "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
          "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
          "rangeMainContainer": "HvDatePicker-rangeMainContainer",
          "root": "HvDatePicker-root",
        }
      }
      labels={
        Object {
          "applyLabel": "Apply",
          "cancelLabel": "Cancel",
          "placeholder": "Select a date",
          "rangeEnd": "End date",
          "rangeStart": "Start date",
          "title": "",
        }
      }
    >
      <HvDatePicker
        classes={
          Object {
            "dropdown": "HvDatePicker-dropdown",
            "icon": "HvDatePicker-icon",
            "input": "HvDatePicker-input",
            "inputCalendarClosed": "HvDatePicker-inputCalendarClosed",
            "inputCalendarOpen": "HvDatePicker-inputCalendarOpen",
            "inputContainer": "HvDatePicker-inputContainer",
            "label": "HvDatePicker-label",
            "panel": "HvDatePicker-panel",
            "rangeCalendarContainer": "HvDatePicker-rangeCalendarContainer",
            "rangeCalendarsContainer": "HvDatePicker-rangeCalendarsContainer",
            "rangeMainContainer": "HvDatePicker-rangeMainContainer",
            "root": "HvDatePicker-root",
          }
        }
        id="hv-date-picker-3"
        labels={
          Object {
            "applyLabel": "Apply",
            "cancelLabel": "Cancel",
            "placeholder": "Select a date",
            "rangeEnd": "End date",
            "rangeStart": "Start date",
            "title": "",
          }
        }
      >
        <WithStyles(WithId)
          className="HvDatePicker-root"
          id="hv-date-picker-3"
        >
          <WithId
            className="HvDatePicker-root"
            classes={
              Object {
                "root": "HvFormElement-root",
              }
            }
            id="hv-date-picker-3"
          >
            <HvFormElement
              className="HvDatePicker-root"
              classes={
                Object {
                  "root": "HvFormElement-root",
                }
              }
              id="hv-date-picker-3"
            >
              <div
                className="HvDatePicker-root HvFormElement-root"
              >
                <WithStyles(HvLabel)
                  className="HvDatePicker-label"
                  id="hv-date-picker-3-label"
                  label=""
                >
                  <HvLabel
                    className="HvDatePicker-label"
                    classes={
                      Object {
                        "childGutter": "HvLabel-childGutter",
                        "labelDisabled": "HvLabel-labelDisabled",
                        "root": "HvLabel-root",
                      }
                    }
                    id="hv-date-picker-3-label"
                    label=""
                  >
                    <WithStyles(ForwardRef)
                      className="HvDatePicker-label HvLabel-root"
                      component="label"
                      id="hv-date-picker-3-label"
                      variant="highlightText"
                    >
                      <ForwardRef
                        className="HvDatePicker-label HvLabel-root"
                        classes={
                          Object {
                            "3xlTitle": "HvTypography-3xlTitle",
                            "4xlTitle": "HvTypography-4xlTitle",
                            "5xlTitle": "HvTypography-5xlTitle",
                            "disabledText": "HvTypography-disabledText",
                            "highlightText": "HvTypography-highlightText",
                            "lTitle": "HvTypography-lTitle",
                            "link": "HvTypography-link",
                            "mTitle": "HvTypography-mTitle",
                            "noWrap": "HvTypography-noWrap",
                            "normalText": "HvTypography-normalText",
                            "placeholderText": "HvTypography-placeholderText",
                            "root": "HvTypography-root",
                            "sTitle": "HvTypography-sTitle",
                            "sectionTitle": "HvTypography-sectionTitle",
                            "selectedNavText": "HvTypography-selectedNavText",
                            "vizText": "HvTypography-vizText",
                            "vizTextDisabled": "HvTypography-vizTextDisabled",
                            "xlTitle": "HvTypography-xlTitle",
                            "xsInlineLink": "HvTypography-xsInlineLink",
                            "xsTitle": "HvTypography-xsTitle",
                            "xxlTitle": "HvTypography-xxlTitle",
                            "xxsTitle": "HvTypography-xxsTitle",
                          }
                        }
                        component="label"
                        id="hv-date-picker-3-label"
                        variant="highlightText"
                      >
                        <label
                          className="HvDatePicker-label HvLabel-root HvTypography-root HvTypography-highlightText"
                          id="hv-date-picker-3-label"
                        />
                      </ForwardRef>
                    </WithStyles(ForwardRef)>
                    <WithStyles(WithId)
                      adornment={
                        <Calendar
                          className="HvDatePicker-icon"
                        />
                      }
                      classes={
                        Object {
                          "panel": "HvDatePicker-panel",
                          "root": "HvDatePicker-dropdown",
                        }
                      }
                      disablePortal={true}
                      expanded={false}
                      onClickOutside={[Function]}
                      onToggle={[Function]}
                      placeholder={
                        <ForwardRef(WithStyles)
                          variant="placeholderText"
                        >
                          Select a date
                        </ForwardRef(WithStyles)>
                      }
                      placement="right"
                      popperProps={
                        Object {
                          "modifiers": Object {
                            "preventOverflow": Object {
                              "escapeWithReference": true,
                            },
                          },
                        }
                      }
                    >
                      <WithId
                        adornment={
                          <Calendar
                            className="HvDatePicker-icon"
                          />
                        }
                        classes={
                          Object {
                            "arrow": "HvBaseDropdown-arrow",
                            "header": "HvBaseDropdown-header",
                            "headerDisabled": "HvBaseDropdown-headerDisabled",
                            "headerOpen": "HvBaseDropdown-headerOpen",
                            "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                            "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                            "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                            "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                            "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                            "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                            "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                            "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                            "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                            "selection": "HvBaseDropdown-selection",
                            "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                            "truncate": "HvBaseDropdown-truncate",
                          }
                        }
                        disablePortal={true}
                        expanded={false}
                        onClickOutside={[Function]}
                        onToggle={[Function]}
                        placeholder={
                          <ForwardRef(WithStyles)
                            variant="placeholderText"
                          >
                            Select a date
                          </ForwardRef(WithStyles)>
                        }
                        placement="right"
                        popperProps={
                          Object {
                            "modifiers": Object {
                              "preventOverflow": Object {
                                "escapeWithReference": true,
                              },
                            },
                          }
                        }
                      >
                        <HvBaseDropdown
                          adornment={
                            <Calendar
                              className="HvDatePicker-icon"
                            />
                          }
                          classes={
                            Object {
                              "arrow": "HvBaseDropdown-arrow",
                              "header": "HvBaseDropdown-header",
                              "headerDisabled": "HvBaseDropdown-headerDisabled",
                              "headerOpen": "HvBaseDropdown-headerOpen",
                              "headerOpenDown": "HvBaseDropdown-headerOpenDown",
                              "headerOpenUp": "HvBaseDropdown-headerOpenUp",
                              "inputExtensionFloatLeft": "HvBaseDropdown-inputExtensionFloatLeft",
                              "inputExtensionFloatRight": "HvBaseDropdown-inputExtensionFloatRight",
                              "inputExtensionLeftPosition": "HvBaseDropdown-inputExtensionLeftPosition",
                              "inputExtensionOpen": "HvBaseDropdown-inputExtensionOpen",
                              "inputExtensionOpenShadow": "HvBaseDropdown-inputExtensionOpenShadow",
                              "panel": "HvBaseDropdown-panel HvDatePicker-panel",
                              "root": "HvBaseDropdown-root HvDatePicker-dropdown",
                              "selection": "HvBaseDropdown-selection",
                              "selectionDisabled": "HvBaseDropdown-selectionDisabled",
                              "truncate": "HvBaseDropdown-truncate",
                            }
                          }
                          disablePortal={true}
                          expanded={false}
                          id="hv-base-dropdown-4"
                          onClickOutside={[Function]}
                          onToggle={[Function]}
                          placeholder={
                            <ForwardRef(WithStyles)
                              variant="placeholderText"
                            >
                              Select a date
                            </ForwardRef(WithStyles)>
                          }
                          placement="right"
                          popperProps={
                            Object {
                              "modifiers": Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              },
                            }
                          }
                        >
                          <div
                            aria-expanded={false}
                            aria-haspopup="listbox"
                            aria-labelledby="hv-date-picker-3-selectionPlaceholder"
                            className="HvBaseDropdown-root HvDatePicker-dropdown"
                            id="hv-date-picker-3"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            tabIndex={0}
                          >
                            <div
                              aria-labelledby="hv-date-picker-3-selectionPlaceholder"
                              className="HvBaseDropdown-header"
                              id="hv-date-picker-3-header"
                              role="textbox"
                            >
                              <div
                                className="HvBaseDropdown-selection"
                                id="hv-date-picker-3-selectionPlaceholder"
                              >
                                <WithStyles(ForwardRef)
                                  variant="placeholderText"
                                >
                                  <ForwardRef
                                    classes={
                                      Object {
                                        "3xlTitle": "HvTypography-3xlTitle",
                                        "4xlTitle": "HvTypography-4xlTitle",
                                        "5xlTitle": "HvTypography-5xlTitle",
                                        "disabledText": "HvTypography-disabledText",
                                        "highlightText": "HvTypography-highlightText",
                                        "lTitle": "HvTypography-lTitle",
                                        "link": "HvTypography-link",
                                        "mTitle": "HvTypography-mTitle",
                                        "noWrap": "HvTypography-noWrap",
                                        "normalText": "HvTypography-normalText",
                                        "placeholderText": "HvTypography-placeholderText",
                                        "root": "HvTypography-root",
                                        "sTitle": "HvTypography-sTitle",
                                        "sectionTitle": "HvTypography-sectionTitle",
                                        "selectedNavText": "HvTypography-selectedNavText",
                                        "vizText": "HvTypography-vizText",
                                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                                        "xlTitle": "HvTypography-xlTitle",
                                        "xsInlineLink": "HvTypography-xsInlineLink",
                                        "xsTitle": "HvTypography-xsTitle",
                                        "xxlTitle": "HvTypography-xxlTitle",
                                        "xxsTitle": "HvTypography-xxsTitle",
                                      }
                                    }
                                    variant="placeholderText"
                                  >
                                    <p
                                      className="HvTypography-root HvTypography-placeholderText"
                                    >
                                      Select a date
                                    </p>
                                  </ForwardRef>
                                </WithStyles(ForwardRef)>
                              </div>
                              <Calendar
                                className="HvDatePicker-icon"
                              >
                                <WithStyles(HvIconBase)
                                  className="HvDatePicker-icon"
                                  iconSize="S"
                                  name="Calendar"
                                >
                                  <HvIconBase
                                    className="HvDatePicker-icon"
                                    classes={
                                      Object {
                                        "l": "HvIconBase-l",
                                        "m": "HvIconBase-m",
                                        "root": "HvIconBase-root",
                                        "s": "HvIconBase-s",
                                        "xs": "HvIconBase-xs",
                                      }
                                    }
                                    iconSize="S"
                                    name="Calendar"
                                  >
                                    <div
                                      className="HvDatePicker-icon HvIconBase-root HvIconBase-s"
                                      name="Calendar"
                                    >
                                      <svg
                                        focusable={false}
                                        height={16}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          className="color0"
                                          d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                                          fill="#414141"
                                        />
                                      </svg>
                                    </div>
                                  </HvIconBase>
                                </WithStyles(HvIconBase)>
                              </Calendar>
                            </div>
                          </div>
                          <ForwardRef(Popper)
                            anchorEl={null}
                            disablePortal={true}
                            modifiers={
                              Object {
                                "preventOverflow": Object {
                                  "escapeWithReference": true,
                                },
                              }
                            }
                            open={false}
                            placement="bottom-start"
                            popperOptions={
                              Object {
                                "onCreate": [Function],
                                "onUpdate": [Function],
                              }
                            }
                            style={
                              Object {
                                "zIndex": 1500,
                              }
                            }
                          />
                        </HvBaseDropdown>
                      </WithId>
                    </WithStyles(WithId)>
                  </HvLabel>
                </WithStyles(HvLabel)>
              </div>
            </HvFormElement>
          </WithId>
        </WithStyles(WithId)>
      </HvDatePicker>
    </WithId>
  </WithLabels>
</WithStyles(WithLabels)>
`;
